# App

./: find.xml  jdk.table.xml  updates.xml  vcs.xml
_windows/: path.macros.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Calculator.cpp  Calculator.h  PlayingCallback.cpp  PlayingCallback.h  RecordingCallback.cpp  RecordingCallback.h  SampleClass.cpp  SampleClass.h  SoundRecording.cpp  SoundRecording.h  Utils.h  jni-bridge.cpp
app/src/main/java/com/put/soundapp/: AddNumberActivity.kt  AudioEngine.kt  MainActivity.kt  PlaybackEngine.kt
app/src/main/res/layout/: activity_add_number.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
colors/: _@user_Default.icls
gradle/wrapper/: gradle-wrapper.properties
